fix spacing on mobile

--- a/src/routes/root.css
+++ b/src/routes/root.css
@@ -135,6 +135,7 @@ code {
   }
   .main {
     margin-right: 1rem;
+    padding: 0 1rem;
   }
   .content {
     flex-wrap: wrap;
